# makehaven-data

./: main.py  pyproject.toml
notebooks/: base.ipynb  events.ipynb
queries/: basic_users.sql  event_particpants.sql  member_view.sql
