[project]
name = "makehaven"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.4.6",
    "pandas>=2.3.2",
    "pandas-stubs>=2.3.2.250827",
    "pymysql>=1.1.2",
    "pyspark>=4.0.1",
    "sqlalchemy>=2.0.43",
]
